--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitwallet",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-private-methods": "^7.22.5",
     "@ethersproject/shims": "^5.7.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.6",
@@ -19,6 +20,7 @@
     "expo-file-system": "~15.2.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
