--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.7.0",
     "expo": "~48.0.18",
     "expo-asset": "~8.9.1",
+    "expo-clipboard": "~4.1.2",
     "expo-file-system": "~15.2.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -25,9 +26,12 @@
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-securerandom": "^1.0.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "13.4.0",
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
