--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "~15.2.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "near-api-js": "^2.1.4",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
